@@ -1,5 +1,4 @@
 requires "HTTP::Tiny" => "0.054";
-requires "Hash::Merge::Simple" => "0.051";
 requires "IO::Socket::SSL" => "1.962";
 requires "JSON::MaybeXS" => "1.003009";
 requires "Mojolicious" => "4.66";
