@@ -33,7 +33,6 @@ location = root
 [GitHubREADME::Badge]
 badges = travis
 badges = coveralls
-badges = cpants
 badges = license
 badges = version
 [PkgVersion]
@@ -47,7 +46,6 @@ copy = LICENSE
 Moo = 1.004002
 IO::Socket::SSL = 1.962
 Mojolicious = 4.66
-Hash::Merge::Simple = 0.051
 perl = 5.014
 Types::Standard = 0.040
 JSON::MaybeXS = 1.003009
