@@ -1,6 +1,10 @@
 Change history for Net-Easypost
 
 {{$NEXT}}
+            - Add support for CustomsInfo & CustomsItem object to support international shipping
+            - Remove default Country of US
+            - Updated Net::Easypost::Address to support all fields returned in the API
+            - Address verification is currently broken; apparently it hasn't worked since v2 of the Easypost API was released ... oops.
 
 0.18        2016-01-05
             - Add JSON as dependency in dist.ini
